[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
solana-sdk = { version = "1.15.2"}
solana-client = { version = "1.15.2"}
solana-program = {version = "1.15.2"}
borsh = { version = "1.5.3"}
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
